[package]
name = "Rust_HD2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "tlhelp32", "handleapi", "winnt"] }
hex = "0.4.3"
ansi_term = "0.12.1"
